cambio de url amigable en htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -300,7 +300,7 @@ FileETag None
 </IfModule>
 
 RewriteRule ^blog$                                        /blog.php
-RewriteRule ^blog/([0-9]*)-(.*)$                          /blog-single.php?id=$1&url=$2
+RewriteRule ^nota/([0-9]*)-(.*)$                          /blog-post.php?id=$1&url=$2
 RewriteRule ^portafolio$                                  /portafolio.php
 RewriteRule ^portafolio/(.*)$                             /portafolio-nota.php?url=$1
 RewriteRule ^panel@marost/$                               /panel@marost/login.php
