--- a/.htaccess
+++ b/.htaccess
@@ -299,6 +299,9 @@ FileETag None
 # RewriteBase /
 </IfModule>
 
+#404
+RewriteRule ^404$                                        /404.php
+
 #BLOG
 RewriteRule ^blog$                                        /blog.php
 RewriteRule ^nota/([0-9]*)-(.*)$                          /blog-post.php?id=$1&url=$2
@@ -401,7 +404,7 @@ Options -MultiViews
 # You can add custom pages to handle 500 or 403 pretty easily, if you like.
 # If you are hosting your site in subdirectory, adjust this accordingly
 #    e.g. ErrorDocument 404 /subdir/404.html
-ErrorDocument 404 /404.html
+ErrorDocument 404 /404
 
 
 # ----------------------------------------------------------------------
